--- a/21.8.22기초강의 필기.md
+++ b/21.8.22기초강의 필기.md
@@ -1,187 +1,185 @@
 # HTML-CSS
 CSS
-스타일과 스타일 시트
+스타일과 스타일 시트<br><br>
 
 스타일(style) -문서에서 자주 사용하는 글꼴이나 색상,정렬, 각 요소들의 배치방법 등
- 문서의 겉모습을 결정짓는 내용들
+ 문서의 겉모습을 결정짓는 내용들<br>
 스타일 시트(stlye sheet)- 스타일을 관리하기 쉽도록 한 군데 모아놓은 것
-
+<br><br>
 (스타일 형식)
-p {text-align: center;}
-p선택자  text-align:스타일 center; 속성 속성값
+```p {text-align: center;}```
+p선택자  text-align:스타일 center; 속성 속성값<br><br>
 
-(내부 스타일 시트)
+(내부 스타일 시트)<br>
 웹문서 안에서 사용할 스타일을 문서 안에 정리한 것
 모든 스타일 정보는 <head></head>태그안에 적용한다.
-
-(외부 스타일 시트)
-여러 웹 문서에서 사용할 스타일을 별도 파일로 저장해놓고 필요할 때마다 ㅠㅏ일에서 가져와 사ㅣ용
+<br>
+(외부 스타일 시트)<br>
+여러 웹 문서에서 사용할 스타일을 별도 파일로 저장해놓고 필요할 때마다 파일에서 가져와 사용<br>
 <style>태그 없이 <link>태그만 사용해 미리 만들어 놓은 외부 스타일 시트 파일 연결
-
-(인라인 스타일)
-스타일 시트를 사용하징 않고 스타일을 적용할 대상애 직접 표시
+<br><br>
+(인라인 스타일)<br>
+스타일 시트를 사용하징 않고 스타일을 적용할 대상애 직접 표시<br>
 스타일을 적용하고 싶은 태그에 style 속성을 사용해 style = "속성: 속성 값;" 형태로 스타일 적용
-
-주요선택자
--전체 선택자: 페이지에 있는 모든 요소를 대상으로 스타일을 적용할 때 사용
--태그 선택자: 문서에서 특정 태그를 사용한 모든요소에 적용
--클래스 선택자: 문서안에 여러번 사용할 스타일 
--id선택자: 문서안에 한번만 사용
--그룹선택자: 같은 스타일을 사용하는 선택자를 한꺼번에 정의 
-                 쉼표로 구분해 여러 선택자를 나열
------------------------------------------------------------------------
-캐스캐이딩 스타일 시트
-위에서 아래로 흐른다는 뜻
+<br><br>
+주요선택자<br>
+-전체 선택자: 페이지에 있는 모든 요소를 대상으로 스타일을 적용할 때 사용<br>
+-태그 선택자: 문서에서 특정 태그를 사용한 모든요소에 적용<br>
+-클래스 선택자: 문서안에 여러번 사용할 스타일<br> 
+-id선택자: 문서안에 한번만 사용<br>
+-그룹선택자: 같은 스타일을 사용하는 선택자를 한꺼번에 정의, 쉼표로 구분해 여러 선택자를 나열
+<br><br>
+ -----------------------------------------------------------------------------------------------------<br>
+(캐스캐이딩 스타일 시트)<br>
+위에서 아래로 흐른다는 뜻 
 스타일 충돌을 막기위해 위에서 아래로 흐르며 적용되는 방법
-
-원칙1
-(스타일 우선순위)
-
+<br><br>
+원칙1<br>
+(스타일 우선순위)<br>
+<br>
 사용자 스타일 시트-> 제작자 스타일 시트-> 제작자 스타일 시트->
 브라우저 스타일 시트
-
+<br>
 얼마나 한정지을 수 있는가에 따라
 인라인스타일-> id스타일-> 클래스 스타일-> 태그 스타일
+<br>
+원칙2<br>
+(스타일 상속)<br>
+부모요소가 자식요소에게 상속 가능 
+모든 속성이 상속되는 것은아님<br>
 
-원칙2
-(스타일 상속)
-부모요소가 자식요소에게 상속 가능
-모든 속성이 상속되는 것은아님
--------------------------------------------------------------------------
-브라우저 접두사를 자동으로 붙여주기
-prefix - free.js 브라우저 벤더 접두사 자동으로 붙여줌
--------------------------------------------------------------------------
-텍스트 스타일 
-font-family 속성
+ -----------------------------------------------------------------------------------------------------<br>
+
+ 브라우저 접두사를 자동으로 붙여주기<br>
+prefix - free.js 브라우저 벤더 접두사 자동으로 붙여줌<br>
+
+ -----------------------------------------------------------------------------------------------------<br>
+(텍스트 스타일)<br> 
+font-family 속성<br>
 웹문서에 사용할 글꼴 지정
 지정한 글꼴이 없을 경우를 대비해 두번째 세번째 글꼴까지 기정함
 속성은 상속되기 때문에 <body>태그 스타일에 한번만 지정하면됨
-
-@font-face속성
+<br><br>
+@font-face속성<br>
 웹폰트사용 웹문서안에 글꼴 정보도 함께 업로드해야만 가능하다.
 구글 웹폰트사용이 유용!
 
-텍스트 스타일
-color속성
+(텍스트 스타일)<br>
+color속성-
 글자색 지정
-16진수 값이나 rgb값 hsl값,색상 이름 중에서 사용
+16진수 값이나 rgb값 hsl값,색상 이름 중에서 사용<br>
 구글 color picker사이트 사용
-
-text- decoration 속성
+<br><br>
+text- decoration 속성<br>
 텍스트에 밑줄 긋거나 없애는 기능
-
-text- shadow속성
+<br><br>
+text- shadow속성<br>
 텍스트에 그림자 효과를 추가하는 속성
-
-whits-space속성
-공백처리 방법 지정
------------------------------------------------------------------------
-문단 스타일
-text-indent속성
+<br><br>
+whits-space속성<br>
+공백처리 방법 지정<br>
+ -----------------------------------------------------------------------------------------------------<br>
+(문단 스타일)<br>
+text-indent속성<br>
 문단의 첫 글자를 얼마나 들여 쓸지 지정
-
-line-height속성
+<br><br>
+(line-height속성)<br>
 문단의 줄 간격 지정
 보통 글자 크기의 1.5~2배 정도면 적당
-
-목록과 링크 스타일
-list-style- type 속성
+<br><br>
+(목록과 링크 스타일)<br>
+list-style- type 속성<br>
 순서없는 목록의 불릿이나 순서목록의 숫자를 바꾸는 속성
-
-list-style-image 속성
+<br><br>
+list-style-image 속성<br>
 url안에 경로를 넣으면 지정된 이미지파일이 뜬다.
-
-list-style-position 속성
+<br><br>
+list-style-position 속성<br>
 불릿이나 번호를 들여쓰거나 내어쓸 수 있음
-
-list-style 속성
-list-style- type, list-style-image, list-style-position 속성을 한꺼번에 표기
-----------------------------------------------------------------------
-웹에서 색상 표현하기
+<br><br>
+list-style 속성<br>
+list-style- type, list-style-image, list-style-position 속성을 한꺼번에 표기<br>
+ -----------------------------------------------------------------------------------------------------<br>
+(웹에서 색상 표현하기)<br>
 16진수 표기법
 -두자리씩 중복될 경우 줄여 사용가능
-
+<br>
 rgb/rgba표기법
 -세자리 숫자로 표시
 -불투명도 조절가능
-
+<br>
 hsl/hsla 표시법
 -세자리 숫자로 표시
 -앞의 숫자부터 색상,채도,밝기,투명도 조절
-
+<br>
 색상이름 표시
-
-배경 색과 배경 이미지
+<br><br>
+(배경 색과 배경 이미지)
 backgraound-color
 문서 전체에 지정
 div영역에만 원하는 지정색 가능
-
+<br>
 background-clip 속성
-배경을 어디까지 적용할지 지정
-박스 모델 기준
-
+-배경을 어디까지 적용할지 지정
+-박스 모델 기준
+<br>
 background-image 속성
-배경 이미지 지정
-배경 이미지 파일 경로 지정
-
+-배경 이미지 지정
+-배경 이미지 파일 경로 지정
+<br>
 background-repeat 속성
-배경 이미지 반복여부 가로로반복하거나 새로로 반복가능
-
+-배경 이미지 반복여부 가로로반복하거나 새로로 반복가능
+<br>
 background-size 속성
-배경 이미지 크기 조절
-
+-배경 이미지 크기 조절
+<br>
 background- position 속성
-배경 이미지를 반복하지 않을 경우, 배경 이미지를 표시할 위치 지정
-
+-배경 이미지를 반복하지 않을 경우, 배경 이미지를 표시할 위치 지정
+<br>
 background-attachment속성
-배경 이미지를 고정하는 속성
-
+-배경 이미지를 고정하는 속성
+<br>
 background 속성
-배경 관련 속성을 줄여서 표기
-각 속성 값이 다르므로 표기 순서는 상관없음
---------------------------------------------------------------------------
-그라데이션 효과로 배경 꾸미기
+-배경 관련 속성을 줄여서 표기
+-각 속성 값이 다르므로 표기 순서는 상관없음<br>
+ -----------------------------------------------------------------------------------------------------<br>
+그라데이션 효과로 배경 꾸미기<br><br>
 
-(그라데이션과 브라우저 접두사)
-그라데이션은 크기가 없는 배경이미지, background-image나 background 속성에서 사용
+(그라데이션과 브라우저 접두사)<br>
+그라데이션은 크기가 없는 배경이미지, background-image나 background 속성에서 사용<br>
 구형 브라우저에서는 브라우저 접두사를 붙여야 동작함
-
-선형 그라데이션
-수직,수평방향으로, 혹은대각선 방향으로 색상이 일정하게 변하는것
+<br>
+선형 그라데이션<br>
+수직,수평방향으로, 혹은대각선 방향으로 색상이 일정하게 변하는것 
 선형 그라데이션 지정 할때는 방향과 색상이 필요
-
-방향
+<br><br>
+방향<br>
 to키워드와 함께 사용
-
-각도
-그라데이션이 끝나는 각도
+<br><br>
+각도<br>
+그라데이션이 끝나는 각도 
 단위는 deg
-
-색상 중지점
-색상이 바뀌는 지점
+<br><br>
+색상 중지점(색상이 바뀌는 지점)<br>
 색상만 지정할 수도있고 색상과 함께 중지 점의 위치도 함께 지정할 수도 있음
-
-원형 그라데이션
+<br><br>
+원형 그라데이션<br>
 원이나 타원의 중심부터 동심원을 그리며 바깥 방향으로 색상이 바뀌는 그라데이션
 radial-gradient
-
-위치
-그라데이션이 시작하는 원의 중심 지정 
-모양과 크기 속성 다음에 at키워드와 함께  위치값 지정
-
-크기
-그라데이션 원의 크기 지정
-closest- side  
-closest-corner
-farthest-side
-farthest-corner
-
-색상 중지점
-색상이 바뀌는 지점
-색상만 지정할 수도 있고 색상과 함께 중지 점의 위피도 함께 지정할 수도 있음.
-
+<br><br>
+위치<br>
+그라데이션이 시작하는 원의 중심 지정  
+모양과 크기 속성 다음에 at키워드와 함께 위치값 지정
+<br><br>
+크기<br>
+그라데이션 원의 크기 지정<br>
+1. closest- side  <br>
+2. closest-corner  <br>
+3. farthest-side  <br>
+4. farthest-corner  <br>
+<br><br>
 css 제너레이터의 도움을 받는 것도 좋다
-
-그라데이션 반복
+<br>
+그라데이션 반복-
 단순히 그라데이션을 반복하는 것이아니라 패턴을 만들어 반복시킴
 
